Fix problems when target VM runs with a security manager (as far as thats possible) No agent updates will be possible if the security manager disallows the creation of a class loader